tests/typescript/neg/simple/glob-001.ts
var glob /*@ { number | v > 10 } */ = true;

